sass/_base.scss
@import url('http://fonts.googleapis.com/css?family=Bree+Serif|Merriweather');
@import url('http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css');
* {
  box-sizing: border-box;
}

body,html{
    width: 100%;
    min-width: 600px;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}
div.secta{
    background-color: $bond;
}
div.sectb{
    background-color: $forever;
}

div.sectc{
    background-color: $bond;
}


nav.large{
    height: 6em;  
    li{
        margin: 3em 1em;
    }
    h1{
        margin: 0.5em;   
    }
}
nav.small{
    height: 3.5em;

    li{
        margin: 1.5em 1em;
    }
    h1{
        margin: 1em;
    }
}
nav {
    background: $kindgiant;
    z-index: 10000;
    margin-bottom: -6em;
    width:100%;
    position:fixed;
    display: inline;
    box-shadow: 0 2px 3px rgba(0,0,0,.4);
    
    h1{
        font-size: 1.4em;
        float:left;
        color:$innocence;
        padding-left: 0.5em;
    }
    ul{
        float:right;
    }
    li{
        float:left;
        font-size: 1em;
        display: inline-block;
    }

    a{
        font-size: 1em;
        text-decoration: none; 
        color:$innocence;

    }

    a:hover{
        color: $innocence-sel;
    }
    
}

footer{
    background-color: $kindgiant;
    height: 5em;
    width:100%;
    display: inline-block;
    text-align:center;
    h1{
        font-size: 1.2em;
        color:$innocence;
        padding:0.5em;
    }

    li{
        display: inline-block;
        margin-right:0.5em;
    }
}

.carousel{
    margin:80px 0 0 0;
    width: 100%;
    height:30em;
    position:relative;
    overflow:hidden;
    
    li{
        display:none;
        position: absolute;
        top:0;
        left:0;
    }
    
    img{
        width:100%;    
    }
}

.imagebackground{
    background:url(http://placehold.it/2000x800);
    width:100%;
    padding-top: 5em;
    margin-bottom: -0.5em;
    height: 30em;
    display:block;
    background-position:center;
    
}

.fixedImage{
    background:url("../images/IllinoisQuad.jpg") no-repeat;
    background-size:100%;
    width:100%;
    margin:0;
    border:0;
    padding:0;
    height: 25em;
    background-attachment: fixed;
}

video{
    width: 80%;
}
div.mainbody {
    position: relative; 
    padding: 3em;
    width : 100%;
    margin-top: 0;
    text-align: center;

    h1{
        font-size: 1.6em;
        color: $pachyderm;
        margin-bottom: 18px;
    }

    p{
        margin-bottom: 24px;
    }
}

.column-left{ float: left; width: 33%; }
.column-right{ float: right; width: 33%; }
.column-center{ display: inline-block; width: 33%; }

a.highlight{
    border-top: 2px solid $innocence-sel;
    padding-top: 5px;
    color: $innocence-sel;
    
}

.section{
    display: block;
}

.section-small{
    height: 2.5em;
    margin: -1.9em 0 0;
}

nav, a, li{
    transition: all 0.8s;
    -moz-transition: all 0.8s;
    -webkit-transition: all 0.8s;
    -o-transition: all 0.8s;
}

